# src/controllers/taskController.js
@@ -1,7 +1,12 @@
 import * as taskService from '../services/taskService.js';
 
 export async function getTasks(req, res, next) {
-  const tasks = await taskService.getAllTasks();
+  const { completed } = req.query;
+  const filter = {};
+  if (completed !== undefined) {
+    filter.completed = completed === 'true';
+  }
+  const tasks = await taskService.getAllTasks(filter);
   res.json(tasks);
 }
 
