# src/middleware/validateTask.js
@@ -1,5 +1,13 @@
-import { body } from 'express-validator';
+import { body, query } from 'express-validator';
 import { checkValidationResults } from './handleValidationErrors.js';
+
+export const validateTaskQuery = [
+  query('completed')
+    .optional()
+    .isIn(['true', 'false'])
+    .withMessage('completed must be "true" or "false"'),
+  checkValidationResults,
+];
 
 export const validateTask = [
   body('title')
@@ -10,11 +18,9 @@ export const validateTask = [
     .bail()
     .isLength({ min: 3, max: 100 })
     .withMessage('Title must be at least 3 and at most 100 characters'),
-
   body('completed')
     .optional()
     .isBoolean()
     .withMessage('completed must be true or false'),
-
   checkValidationResults,
 ];
